perf: add alt text for images | add [lang] attribut in app.vue | add font-display to prevent invisible text before the font loading

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -6,7 +6,8 @@
     font-family: 'Montserrat';
     src: url('./fonts/Montserrat-Regular.ttf') format('truetype');
     font-weight: normal;
-    font-style: normal
+    font-style: normal;
+    font-display: swap
 }
 
 body {
